--- a/angular.json
+++ b/angular.json
@@ -31,11 +31,13 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/font-awesome/css/font-awesome.css"
             ],
-            "scripts": []
+            "scripts": [
+              
+            ]
           },
           "configurations": {
             "production": {
@@ -109,6 +111,5 @@
         }
       }
     }
-  },
-  "defaultProject": "employees"
+  }
 }
